--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/morgan": "^1.7.35",
     "@types/nconf": "^0.10.0",
     "@types/node": "^12.0.2",
+    "@types/uuid": "^3.4.4",
     "@types/verror": "^1.10.3",
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
@@ -25,6 +26,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5",
+    "uuid": "^3.3.2",
     "verror": "^1.10.0",
     "winston": "^3.2.1"
   },
