added docker config

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {    
   "APP_PORT": "3000",
-  "MONGO_DB_URL": "mongodb://localhost:27017/merida?replicaSet=rs0"
+  "MONGO_DB_URL": "mongodb://localhost:27017/merida"
 }
   
