--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
-version: '3'
+version: '3.3'
 
 services:
-  mongodb:
-    image: bitnami/mongodb:4.0.9
-    container_name: meridaMongodb
+  mongo:
+    image: mongo
     ports:
-      - '27017:27017'
-    volumes:
-      - 'mongodb_data:/bitnami'
-    environment:
-      - MONGODB_REPLICA_SET_NAME=rs0
-      - MONGO_DATABASE=merida
-      - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_ADVERTISED_HOSTNAME=localhost
+      - '27018:27017'
 
-volumes:
-  mongodb_data:
+  merida:
+    build: .
+    ports:
+      - '3002:3002'
+    environment:
+      - MONGO_DB_URL=mongodb://mongo:27017/merida
+      - WAIT_HOSTS= mongo:27017
+    links:
+      - mongo
+    depends_on:
+      - mongo
